src/widgets/snapshots/rstv__widgets__static_text__tests__snapshot_label_lit.snap
---
source: src/widgets/static_text.rs
expression: screen.snapshot()
---
size: 12x1
cursor: hidden
text:
| Name       |
attr:
|abaaaaaaaaaa|
legend:
  . default
  a fg=RGB(255,255,255) bg=RGB(170,170,170)
  b fg=RGB(255,255,85) bg=RGB(170,170,170)
