src/widgets/snapshots/rstv__widgets__static_text__tests__snapshot_static_text_word_wrap.snap
---
source: src/widgets/static_text.rs
expression: screen.snapshot()
---
size: 12x3
cursor: hidden
text:
|hello world |
|foo         |
|            |
attr:
|aaaaaaaaaaaa|
|aaaaaaaaaaaa|
|aaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
